# MaterialEditor

./: .gitignore  CMakeLists.txt  README.md  cube.hpp  debug.hpp  editor.hpp  framebuffer.hpp  graph.hpp  link.h  link.hpp  main.cpp  node.h  node.hpp  nodeeditor.h  object.hpp  shader.hpp  texture.hpp  vertex_shader.glsl
